app/assets/css/rtwpideas-client-styles.css
/*
To change this license header, choose License Headers in Project Properties.
To change this template file, choose Tools | Templates
and open the template in the editor.
*/
/* 
    Created on : 17 Feb, 2014, 3:36:20 PM
    Author     : kaklo
*/

.highlight {
	background-color: #fff34d;
	-moz-border-radius: 5px; /* FF1+ */
	-webkit-border-radius: 5px; /* Saf3-4 */
	border-radius: 5px; /* Opera 10.5, IE 9, Saf5, Chrome */
	-moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.7); /* FF3.5+ */
	-webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.7); /* Saf3.0+, Chrome */
	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.7); /* Opera 10.5+, IE 9.0 */
}

.highlight {
	padding:1px 4px;
	margin:0 -4px;
}


#loop-common article{
	border-bottom: 1px dotted #ddd;
	padding-bottom: 0px;
	padding-top:20px;
}

.rtwpIdeaVoteBadge .rtwpIdeaVoteButton .btnVote{
	width: 80px;
	height: 30px;
	background: #4b74bb;
	border: none;
	color: #ffffff;
	border-radius: 3px;
	font-size:12px;
}
.btnVote:hover, .btnVote:focus, #btnOpenThickbox:hover, #btnOpenThickbox:focus{
	background: #3e63a4;
}

#btnNewThickbox,#btnOpenThickbox{
	font-size: 16px;
	text-decoration: none;
	background-color: #4b74bb;
	color: #FFFFFF;
	padding: 10px 10px;
	border-radius: 5px;
}

#insertIdeaForm #txtIdeaContent{
	height : 200px !important;
}

#insertIdeaForm input[type='text'],#insertIdeaForm textarea, #txtSearchIdea{
	-webkit-appearance: none;
	-webkit-border-radius: 0;
	border-radius: 0;
	background-color: #fff;
	font-family: inherit;
	border: 1px solid #ccc;
	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
	box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
	color: rgba(0,0,0,0.75);
	display: block;
	font-size: 0.875rem;
	margin: 0 0 1rem 0;
	padding: 0.5rem;
	height: 2.3125rem;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	-webkit-transition: -webkit-box-shadow 0.45s,border-color 0.45s ease-in-out;
	-moz-transition: -moz-box-shadow 0.45s,border-color 0.45s ease-in-out;
	transition: box-shadow 0.45s,border-color 0.45s ease-in-out;
}
#insertIdeaForm input[type='text']:focus,#insertIdeaForm textarea:focus, #txtSearchIdea:focus{
	-webkit-box-shadow: 0 0 5px #999;
	-moz-box-shadow: 0 0 5px #999;
	box-shadow: 0 0 5px #999;
	border-color: #999;
}

#insertIdeaFormCancel{
	margin-left:15px;
}
#btninsertIdeaFormSubmit{
	padding: 0;
	margin: 0;
	width: 140px;
	height: 50px;
	background: #4b74bb;
	border: none;
	color: #ffffff;
	border-radius: 3px;
	font-size:16px;
}
#btninsertIdeaFormSubmit:hover, #btninsertIdeaFormSubmit:focus{
	background: #3e63a4;
}
.rtwpIdeaVoteCount{
	background-color: #FCFDFF;
	border: 1px solid #CFD7E6;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
	border-radius: 3px;
	-moz-box-shadow: rgba(0,0,0,.1) 0 1px 1px;
	-webkit-box-shadow: rgba(0,0,0,.1) 0 1px 1px;
	box-shadow: rgba(0,0,0,.1) 0 1px 1px;
	color: #8F9BB3;
	font-size: 12px;
	line-height: 14px;
	margin-bottom: 3px;
	padding: 12px 0 9px 0;
	text-align: center;
}
.rtwpIdeaVoteCount strong {
	color: #292C33;
	display: block;
	font-size: 18px;
	font-weight: bold;
	margin-bottom: 5px;
}
.rtwpIdeaVoteBadge {
	width:80px;
	position : absolute;
}
.rtwpIdeaHeader {
	padding-left:100px;
	word-wrap: break-word;
}
.rtwpIdeaTitle {
	font-size: 18px;
	font-weight: bold;
	line-height: 1em;
	margin-bottom: 10px;
}

.rtwpIdeaTitle a.link, .rtwpIdeaTitle a.visited{
	color: #222;
}

.rtwpIdeaTitle a:hover, .rtwpIdeaTitle a.focus{
	color: #c03028;
}

.rtwpIdeaDescription {
	font-size: 12px;
	margin-bottom: 10px;
}
.typeset {
	line-height: 1.75rem;
	text-rendering: optimizeLegibility;
}
.rtwpAttachments {
	clear: both;
	float: left;
	width: 100%;
	list-style: none;
	margin:0;
	padding:0;
}
.rtwpAttachment {
	float: left;
	margin-right: 20px;
	margin-bottom: 30px;
	width: 190px;
}
.rtwpAttachmentLink {
	float: left;
	width: 100%;
	color: #446cb3;
}

.rtwpAttachmentLink:hover {
	color: #c03028;
}

figure {
	position: relative;
}
.rtwpAttachmentThumbnail {
	background-color: #FCFDFF;
	background-position: 50% 50%;
	background-repeat: no-repeat;
	border: 2px solid #fefefe;
	border-right-color: #f1f1f1;
	border-left-color: #f1f1f1;
	border-bottom-color: #e2e2e2;
	-moz-border-radius: 1px;
	-webkit-border-radius: 1px;
	border-radius: 1px;
	-moz-box-shadow: rgba(0,0,0,.75) 0 0 1px;
	-webkit-box-shadow: rgba(0,0,0,.75) 0 0 1px;
	box-shadow: rgba(0,0,0,.75) 0 0 1px;
	float: left;
	height: 28px;
	width: 28px;
	margin-right: 5px;
}
.rtwpAttachmentMeta {
	float: left;
	width: 153px;
	max-width: 100%;
}
.rtwpAttachmentCaption {
	display: block;
	font-size: 12px;
	line-height: 16px;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}
.rtwpAttachmentSize {
	color: #8F9BB3;
	display: block;
	font-size: 11px;
	line-height: 16px;
	text-decoration: none;
}
.rtwpIdeaMeta {
	color: #666F80;
	font-size: 11px;
	margin-bottom: 30px;
}
.rtwpIdeaMeta a {
	color: #446cb3;
}
.rtwpIdeaMeta a:hover{
	color: #c03028;
}
.rtwpStyle-separator {
	color: #B8BECC;
}
#ideaLoadMore{
	width: 100%;
	font-size: 18px;
	text-decoration: none;
	background-color: #4b74bb;
	color: #FFFFFF;
	padding: 10px 10px;
	border-radius: 5px;
	margin: 0 auto;
	float: right;
	text-align: center;
}
.searchidea{
    display: block;
    padding-bottom: 10px;
}
#btnNewThickbox{
    height: 40px;
    vertical-align: bottom;
    float: left;
    line-height: 20px;
}
.idea-loop-common{clear: both;}

#txtSearchIdea{width: 80%;
    float: left;
    height: 40px;
    border-radius:5px;
    -moz-border-radius: 5px; /* FF1+ */
    -webkit-border-radius: 5px; /* Saf3-4 */
    border-radius: 5px; /* Opera 10.5, IE 9, Saf5, Chrome */
}

